<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/arrowback"
        app:title="@string/about">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textWhatsFor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/what_is_it_for"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textWhatsForDec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/this_app_is"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textWhatsFor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textHowToUse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/how_to_use_it"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textWhatsForDec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textHowToUseDec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/how_to_use_desc"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textHowToUse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>